fixtures/invalid/handler-export-missing/src/features/tasks/server/create-task.ts
export function createAnotherTask(): void {
  // The declared createTask export is intentionally absent.
}
